--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Shpfli.GitHub.io by shpfli</title>
+    <title>Hubery's Homepage</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header class="without-description">
-        <h1>Shpfli.GitHub.io</h1>
+        <h1>Welcome to the Hubery's Homepage </h1>
         <p></p>
         <p class="view"><a href="https://github.com/shpfli">View the Project on GitHub <small>shpfli</small></a></p>
         <ul>
